deployment/02-msrdemo-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: msrdemo
  annotations:
  labels:
    name: msrdemo
spec:
  ports:
  - port: 5555
    targetPort: 5555
  selector:
    app: msrdemo
